--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="apple-touch-icon-precomposed" href="images/S-Logo.png">
 <link rel="shortcut icon" href="images/S-Logo.png">
 <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body id="pagetop">
 
@@ -114,6 +115,17 @@ I am also working in Marketing. From formatting the company handbooks and forms,
 
 <script src="js/pageslide.min.js"></script>
 <script> $(".togglepanel").pageslide({ direction: "right", speed: 150, modal: true }); </script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-77778232-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
